tests/errors/err07_return_fuera_funcion.ml
// Error 07: Return fuera de funcion
a = 5;
return a;
